# goit-pythonweb-hw-02

./: .gitignore  Dockerfile  docker-compose.yaml  pyproject.toml  readme.md
