[project]
name = "fastapi-template"
version = "0.1.0"
description = ""
authors = [
    {name = "Oleksii Ablitsov",email = "oleksii.ablitsov@bringg.com"}
]
readme = "README.md"
requires-python = "^3.12"
dependencies = [
    "annotated-types (==0.6.0)",
    "anyio (==4.2.0)",
    "click (==8.1.7)",
    "colorama (==0.4.6)",
    "dnspython (==2.4.2)",
    "exceptiongroup (==1.2.0)",
    "faker (==20.1.0)",
    "fastapi (==0.108.0)",
    "greenlet (==3.0.3)",
    "h11 (==0.14.0)",
    "idna (==3.6)",
    "jinja2 (==3.1.2)",
    "markupsafe (==2.1.3)",
    "psycopg2 (==2.9.9)",
    "pydantic-core (==2.14.6)",
    "pydantic (==2.5.3)",
    "pymongo (==4.6.1)",
    "python-dateutil (==2.8.2)",
    "six (==1.16.0)",
    "sniffio (==1.3.0)",
    "sqlalchemy (==2.0.24)",
    "starlette (==0.32.0.post1)",
    "typing-extensions (==4.9.0)",
    "uvicorn[standart] (==0.25.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
